--- a/day9/day9.html
+++ b/day9/day9.html
@@ -12,11 +12,11 @@
     <div class="nav">
         <div class="score">
            <b>Booked Seats:</b>  <br>
-            <span id="bs"><b>0</b> </span>
+            <span id="bs">0</span>
         </div>
         <div class="score">
            <b>Remaining Seats:</b>  <br>
-            <span id="rs"><b>36</b></span>
+            <span id="rs">36</span>
         </div>
     </div>
     <div class="container">
