--- a/day9/day9.html
+++ b/day9/day9.html
@@ -7,7 +7,7 @@
     <title>day9 booking</title>
     <link rel="stylesheet" href="day9.css">
 </head>
-<body>
+<body class="body">
     
     <div class="nav">
         <div class="score">
@@ -17,6 +17,9 @@
         <div class="score">
            <b>Remaining Seats:</b>  <br>
             <span id="rs">36</span>
+        </div>
+        <div class="theme">
+            <input type="checkbox">
         </div>
     </div>
     <div class="container">
