--- a/day9/day9.html
+++ b/day9/day9.html
@@ -11,11 +11,11 @@
     
     <div class="nav">
         <div class="score">
-           <b>Booked Seats:</b>  <br>
+           <b>Booked seats:</b>  <br>
             <span id="bs">0</span>
         </div>
         <div class="score">
-           <b>Remaining Seats:</b>  <br>
+           <b>Remaining seats:</b>  <br>
             <span id="rs">36</span>
         </div>
         <div class="theme">
@@ -23,42 +23,42 @@
         </div>
     </div>
     <div class="container">
-        <div class="seats" id="1"></div>
-        <div class="seats" id="2"></div>
-        <div class="seats" id="3"></div>
-        <div class="seats" id="4"></div>
-        <div class="seats" id="5"></div>
-        <div class="seats" id="6"></div>
-        <div class="seats" id="7"></div>
-        <div class="seats" id="8"></div>
-        <div class="seats" id="9"></div>
-        <div class="seats" id="10"></div>
-        <div class="seats"id="11"></div>
-        <div class="seats" id="12"></div>
-        <div class="seats" id="13"></div>
-        <div class="seats" id=14></div>
-        <div class="seats" id="15"></div>
-        <div class="seats" id="16"></div>
-        <div class="seats" id="17"></div>
-        <div class="seats" id="18"></div>
-        <div class="seats" id="19"></div>
-        <div class="seats" id="20"></div>
-        <div class="seats" id="21"></div>
-        <div class="seats" id="22"></div>
-        <div class="seats" id="23"></div>
-        <div class="seats" id="24"></div>
-        <div class="seats" id="25"></div>
-        <div class="seats" id="26"></div>
-        <div class="seats" id="27"></div>
-        <div class="seats" id="28"></div>
-        <div class="seats"id="29"></div>
-        <div class="seats" id="30"></div>
-        <div class="seats" id="31"></div>
-        <div class="seats" id=32></div>
-        <div class="seats" id="33"></div>
-        <div class="seats" id="34"></div>
-        <div class="seats" id="35"></div>
-        <div class="seats" id="36"></div>
+        <div class="seat" id="1"></div>
+        <div class="seat" id="2"></div>
+        <div class="seat" id="3"></div>
+        <div class="seat" id="4"></div>
+        <div class="seat" id="5"></div>
+        <div class="seat" id="6"></div>
+        <div class="seat" id="7"></div>
+        <div class="seat" id="8"></div>
+        <div class="seat" id="9"></div>
+        <div class="seat" id="10"></div>
+        <div class="seat"id="11"></div>
+        <div class="seat" id="12"></div>
+        <div class="seat" id="13"></div>
+        <div class="seat" id=14></div>
+        <div class="seat" id="15"></div>
+        <div class="seat" id="16"></div>
+        <div class="seat" id="17"></div>
+        <div class="seat" id="18"></div>
+        <div class="seat" id="19"></div>
+        <div class="seat" id="20"></div>
+        <div class="seat" id="21"></div>
+        <div class="seat" id="22"></div>
+        <div class="seat" id="23"></div>
+        <div class="seat" id="24"></div>
+        <div class="seat" id="25"></div>
+        <div class="seat" id="26"></div>
+        <div class="seat" id="27"></div>
+        <div class="seat" id="28"></div>
+        <div class="seat"id="29"></div>
+        <div class="seat" id="30"></div>
+        <div class="seat" id="31"></div>
+        <div class="seat" id=32></div>
+        <div class="seat" id="33"></div>
+        <div class="seat" id="34"></div>
+        <div class="seat" id="35"></div>
+        <div class="seat" id="36"></div>
     </div>
     <script src="day9.js"></script>
 </body>
