match functionality is complete

--- a/day10/day10.html
+++ b/day10/day10.html
@@ -11,6 +11,9 @@
 
 <body>
     <h1>Welcome My Friend</h1>
+    <div class="page-over">
+        click to start
+    </div>
     <div class="container">
         <div class="game-info" >
             <div class="time"> Time:<span>0</span></div>
@@ -21,7 +24,9 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card">
+                    <img src="photos/01.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
             </div>
         </div>
         <div class="card">
@@ -29,7 +34,9 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card">
+                    <img src="photos/02.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
             </div>
         </div>
         <div class="card">
@@ -37,7 +44,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/03.png" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -45,50 +52,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
-            </div>
-        </div>
-        <div class="card"><div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
-            </div></div>
-        <div class="card"><div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
-            </div></div>
-        <div class="card"><div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
-            </div></div>
-        <div class="card"><div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
-            </div></div>
-        <div class="card"><div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
-            </div><div class="inner">
-            <div class="frontend-card">
-                <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-            </div>
-            <div class="backend-card"></div>
-        </div></div>
-        <div class="card">
-            <div class="inner">
-                <div class="frontend-card">
-                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
-                </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/05.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -96,7 +60,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/03.png" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -104,7 +68,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/07.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -112,7 +76,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/06.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -120,7 +84,7 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/08.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
         <div class="card">
@@ -128,7 +92,63 @@
                 <div class="frontend-card">
                     <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
                 </div>
-                <div class="backend-card"></div>
+                <div class="backend-card"><img src="photos/01.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>     
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/07.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/02.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/04.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/05.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/04.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/08.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="inner">
+                <div class="frontend-card">
+                    <img src="photos/front.jpg" alt="shit" style="height: 125px; width: 100px;">
+                </div>
+                <div class="backend-card"><img src="photos/06.jpg" alt="shit" style="height: 125px; width: 100px;"></div>
             </div>
         </div>
     </div>
