timming functionality complete

--- a/day10/day10.html
+++ b/day10/day10.html
@@ -11,12 +11,12 @@
 
 <body>
     <h1>Welcome My Friend</h1>
-    <div class="page-over">
+    <!-- <div class="page-over">
         click to start
-    </div>
+    </div> -->
     <div class="container">
         <div class="game-info" >
-            <div class="time"> Time:<span>0</span></div>
+            <div class="time"> Time:<span>100</span></div>
             <div class="moves">Moves:<span>0</span></div>
         </div>
         <div class="card">
