--- a/day10/try.html
+++ b/day10/try.html
@@ -40,7 +40,7 @@
       } */
       
       .flip-card-back {
-        background-image: url('photos/first.jpg');
+        background-image: url('photos/01.jpg');
             background-size: 300px 300px;
             transform: rotateY(180deg);
       }
